--- a/src/components/WordCard.css
+++ b/src/components/WordCard.css
@@ -13,5 +13,23 @@ flex-direction: column;
 justify-content: center;
 align-items: center;
 cursor: pointer;
+position: relative;
 }
 
+.delete-card{
+font-weight: bold;
+font-size: 24px;
+border: 3px solid black;
+border-radius: 50%;
+position: absolute;
+right: 10px;
+top: 10px;
+width: 25px;
+height: 25px;
+line-height: 25px;
+text-align: center;
+
+}
+.delete-card:hover{
+    background-color: lightgreen;
+}
